<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DAM_android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- New strings for auth UI -->
    <string name="splash_title">Weldi Win ?</string>
    <string name="logo_desc">App logo</string>
    <string name="welcome_title">Welcome to App</string>
    <string name="welcome_get_started">Get started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">No account? Sign Up</string>
    <string name="already_have_account">Have an account? Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    
    <!-- Google Sign-In Web Client ID -->
    <!-- TODO: Replace with your actual Web Client ID from Google Cloud Console -->
    <!-- Get it from: https://console.cloud.google.com/apis/credentials -->
    <!-- IMPORTANT: This must be a Web application type OAuth 2.0 Client ID, not Android -->
    <string name="GOOGLE_CLIENT_ID"></string>
</resources>